Updated_final_files

--- a/Get_global_sales_values.ipynb
+++ b/Get_global_sales_values.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "#Create Engine \n",
-    "engine = create_engine('postgresql://postgres:simmons@localhost:5432/video_games_project')"
+    "engine = create_engine('postgresql://postgres:****@localhost:5432/video_games_project')"
    ]
   },
   {
